try to fix plot look and remove table white space

--- a/app/nickknows/static/style.css
+++ b/app/nickknows/static/style.css
@@ -77,16 +77,16 @@ padding: 5px 15px;
 }
 
 table {
-background-color: #FFFFFF;
-border: 4px solid black;
-border-collapse: collapse;
-color: #000000;
-display: block;
-font-size: 0.9em;  /* Slightly smaller font */
-margin: 0 auto;    /* Center tables */
-overflow-x: scroll;
-white-space: nowrap;
-}
+  background-color: #FFFFFF;
+  border: 4px solid black;
+  border-collapse: collapse;
+  color: #000000;
+  width: auto;
+  font-size: 0.9em;  /* Slightly smaller font */
+  margin: 0 auto;    /* Center tables */
+  overflow-x: scroll;
+  white-space: nowrap;
+  }
 
 /* Add responsive table container */
 .table-container {
@@ -445,11 +445,11 @@ a#social-media {
 
   table {
     font-size: 0.8em;
-    width: 100%;
+    width: auto;
   }
   
   table td {
     padding: 2px 6px;
-    width: fit-content;
+    width: nowrap;
   }
 }
